DRC/include/ll/Initialization.h

extern "C" {
#include "Header.h"
/**
 * @defgroup LLVMCInitialization Initialization Routines
 * @ingroup LLVMC
 *
 * This module contains routines used to initialize the LLVM system.
 *
 * @{
 */

LLEXPORT void ЛЛИницЯдро(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницТрансформУтил(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницСкалярОпц(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницОпцОбджСиАРЦ(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницВекторизацию(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИНицИнстКомбин(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницАгрессивнИнстКомбайнер(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницМПО(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницИнструментацию(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницАнализ(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницМПА(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницКодГен(ЛЛРеестрПроходок R);
LLEXPORT void ЛЛИницЦель(ЛЛРеестрПроходок R);

/**
 * @}
 */


}